--- a/client/package.json
+++ b/client/package.json
@@ -14,6 +14,7 @@
     "bootstrap": "^5.3.2",
     "fontawesome": "^5.6.3",
     "fortawesome": "^0.0.1-security",
+    "js-cookie": "^3.0.5",
     "popper.js": "^1.16.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.1",
