--- a/client/package.json
+++ b/client/package.json
@@ -2,12 +2,18 @@
   "name": "client",
   "version": "0.1.0",
   "private": true,
+  "license": "SEE LICENSE in root directory of repository",
   "dependencies": {
+    "@babel/core": "^7.23.6",
+    "@babel/plugin-syntax-flow": "^7.23.3",
+    "@babel/plugin-transform-react-jsx": "^7.23.4",
     "@fortawesome/fontawesome-svg-core": "^6.4.2",
     "@fortawesome/free-brands-svg-icons": "^6.4.2",
     "@fortawesome/free-solid-svg-icons": "^6.4.2",
     "@fortawesome/react-fontawesome": "^0.2.0",
     "@popperjs/core": "^2.11.8",
+    "@reduxjs/toolkit": "^2.0.1",
+    "@testing-library/dom": "^9.3.3",
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
@@ -15,13 +21,20 @@
     "fontawesome": "^5.6.3",
     "fortawesome": "^0.0.1-security",
     "js-cookie": "^3.0.5",
+    "jwt-decode": "^4.0.0",
     "popper.js": "^1.16.1",
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.1",
     "react-calendar": "^4.7.0",
     "react-dom": "^18.2.0",
+    "react-helmet": "^6.1.0",
+    "react-redux": "^9.0.4",
     "react-router-dom": "^6.20.1",
     "react-scripts": "5.0.1",
+    "react-spinners": "^0.13.8",
+    "redux": "^5.0.0",
+    "redux-thunk": "^3.1.0",
+    "typescript": "^5.3.3",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
@@ -50,6 +63,9 @@
   },
   "devDependencies": {
     "@babel/plugin-proposal-private-property-in-object": "^7.21.11",
-    "@babel/plugin-transform-private-property-in-object": "^7.23.3"
+    "@babel/plugin-transform-private-property-in-object": "^7.23.4",
+    "autoprefixer": "^10.4.16",
+    "postcss": "^8.4.32",
+    "tailwindcss": "^3.4.0"
   }
 }
