--- a/client/package.json
+++ b/client/package.json
@@ -11,17 +11,23 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^13.5.0",
+    "body-parser": "^1.20.2",
     "bootstrap": "^5.3.2",
+    "express": "^4.18.2",
+    "file-saver": "^2.0.5",
     "fontawesome": "^5.6.3",
     "fortawesome": "^0.0.1-security",
     "js-cookie": "^3.0.5",
+    "jspdf": "^2.5.1",
     "popper.js": "^1.16.1",
+    "raw-loader": "^4.0.2",
     "react": "^18.2.0",
     "react-bootstrap": "^2.9.1",
     "react-calendar": "^4.7.0",
     "react-dom": "^18.2.0",
     "react-router-dom": "^6.20.1",
     "react-scripts": "5.0.1",
+    "texlive": "^1.2.0",
     "web-vitals": "^2.1.4"
   },
   "scripts": {
