--- a/client/package.json
+++ b/client/package.json
@@ -28,7 +28,8 @@
     "react-router-dom": "^6.20.1",
     "react-scripts": "5.0.1",
     "texlive": "^1.2.0",
-    "web-vitals": "^2.1.4"
+    "web-vitals": "^2.1.4",
+    "webpack": "^5.89.0"
   },
   "scripts": {
     "start": "react-scripts start",
